# mumble

./: .gitignore  CMakeLists.txt  README.Bubbles.md  bubbles_da_DK.ts  bubbles_dk.ts  build-bubbles.bat  build-mumble.bat  main.pro  translate.lst
g15helper/: CMakeLists.txt  g15helper.pro
installer/: ClientInstaller.cs
overlay/: CMakeLists.txt  HardHook_minhook.h  overlay-shared.pro  overlay.pro
overlay/overlay_exe/: CMakeLists.txt  overlay_exe-shared.pro
overlay_gl/: CMakeLists.txt
plugins/: CMakeLists.txt
qmake/: openssl.pri  protobuf.pri
qml/: AudioInput.qml  AudioOutput.qml  CertificateManager.qml  Classes.qml  PasswordManager.qml  Rooms.qml  Schools.qml  Servers.qml  Theme.qml  main.qml  qtquickcontrols2.conf
qml/custom/: CustomBackButton.qml  CustomBackground.qml  CustomBusyIndicator.qml  CustomButton.qml  CustomCheckBox.qml  CustomDialogBackground.qml  CustomForwardButton.qml  CustomImageButton.qml  CustomRadioButton.qml  CustomRangeSlider.qml  CustomSlider.qml  CustomTabButton.qml  CustomTableView.qml  CustomTextField.qml  IconLabel.qml  LabelComboBox.qml  LabelTextField.qml  LabelToolTip.qml
qml/dialog/: AddEditServer.qml  AddEditToken.qml  LineEditDialog.qml  MessageDialog.qml
qml/page/: CertificateAuth.qml  ExportCertificate.qml  FinishCertificate.qml  ImportCertificate.qml  NewCertificate.qml  ReplaceCertificate.qml
src/: CMakeLists.txt  licenses.h
src/mumble/: ACLEditor.cpp  ACLEditor.h  ASIOInput.cpp  ASIOInput.h  About.cpp  AudioConfigDialog.cpp  AudioConfigDialog.h  AudioDeviceModel.cpp  AudioDeviceModel.h  AudioInput.cpp  AudioInput.h  AudioOutput.cpp  AudioStats.cpp  AudioStats.h  AudioWizard.cpp  AudioWizard.h  BanEditor.cpp  BanEditor.h  CMakeLists.txt  Cert.cpp  Cert.h  CertificateModel.cpp  CertificateModel.h  ConfigDialog.cpp  ConfigDialog.h  ConnectDialog.cpp  ConnectDialog.h  CrashReporter.cpp  DBus.cpp  Global.cpp  Global.h  GlobalShortcut.cpp  GlobalShortcut.h  GlobalShortcut_win.cpp  LCD.cpp  LCD.h  Log.cpp  Log.h  LookConfig.cpp  LookConfig.h  (+123 more)
src/mumble_exe/: CMakeLists.txt  mumble_exe.pro
src/mumble_proto/: mumble_proto.pro
src/murmur/: CMakeLists.txt
