cmake_minimum_required(VERSION 3.19)

project(Mumble
        VERSION "1.0.0"
        DESCRIPTION "Low-latency VoIP client"
        HOMEPAGE_URL "TODO")

#installer setup
set(CMAKE_MSVC_ARCH x64)
set(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${PROJECT_DESCRIPTION}")
set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_SOURCE_DIR}/README.md)
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_RESOURCE_FILE_README ${CMAKE_SOURCE_DIR}/README.md)
set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE)
set(CPACK_PACKAGE_CONTACT "TODO")
set(CPACK_STRIP_FILES ${CMAKE_PROJECT_NAME})
set(VC_REDIST_FILENAME "vc_redist.x64.exe")
set(CPACK_GENERATOR "NSIS64")
set(CPACK_NSIS_EXECUTABLES_DIRECTORY ".")
set(CPACK_NSIS_MUI_FINISHPAGE_RUN "${CMAKE_PROJECT_NAME}.exe")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CMAKE_PROJECT_NAME}")
set(CPACK_NSIS_CONTACT "${CPACK_PACKAGE_CONTACT}")
set(CPACK_NSIS_INSTALLED_ICON_NAME "${CMAKE_PROJECT_NAME}.exe")
set(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}/icons/bubbles.ico")
set(CPACK_NSIS_MUI_UNIICON "${CMAKE_SOURCE_DIR}/icons/bubbles.ico")
set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
set(CPACK_NSIS_COMPONENT_INSTALL OFF)
set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}\\\\icons\\\\bubbles.bmp")
set(CPACK_NSIS_URL_INFO_ABOUT "${CPACK_PACKAGE_DESCRIPTION_SUMMARY}")
set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "ExecWait '\\\"$INSTDIR\\\\${VC_REDIST_FILENAME}\\\" /install /passive /norestart'
      CreateShortCut \\\"$DESKTOP\\\\${CMAKE_PROJECT_NAME}.lnk\\\" \\\"$INSTDIR\\\\${CMAKE_PROJECT_NAME}.exe\\\" \\\"\\\" \\\"$INSTDIR\\\\bubbles.ico\\\"
      CreateShortCut \\\"$SMPROGRAMS\\\\${CMAKE_PROJECT_NAME}.lnk\\\" \\\"$INSTDIR\\\\${CMAKE_PROJECT_NAME}.exe\\\" \\\"\\\" \\\"$INSTDIR\\\\bubbles.ico\\\"")
set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "Delete \\\"$DESKTOP\\\\${CMAKE_PROJECT_NAME}.lnk\\\"
      Delete \\\"$SMPROGRAMS\\\\${CMAKE_PROJECT_NAME}.lnk\\\"")

find_program(WINDEPLOYQT windeployqt PATHS ${CMAKE_PREFIX_PATH}/bin/)
install(PROGRAMS "${CMAKE_SOURCE_DIR}/build/${CMAKE_PROJECT_NAME}.exe" DESTINATION .)
install(FILES ${CMAKE_SOURCE_DIR}/icons/bubbles.ico DESTINATION .)

#install(FILES ${CMAKE_PREFIX_PATH}/../../Tools/OpenSSL/Win_x64/bin/libcrypto-1_1-x64.dll DESTINATION .)
#install(FILES ${CMAKE_PREFIX_PATH}/../../Tools/OpenSSL/Win_x64/bin/libssl-1_1-x64.dll DESTINATION .)

add_custom_target(windeployqt ALL
      DEPENDS ${CMAKE_PROJECT_NAME}.exe
      COMMAND ${WINDEPLOYQT}
      --dir ${CMAKE_INSTALL_PREFIX}
      --release
      --compiler-runtime
      --qmldir ${CMAKE_SOURCE_DIR}/qml
      ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}.exe
      COMMENT "Preparing Qt runtime dependencies")
install(DIRECTORY ${CMAKE_INSTALL_PREFIX}/ DESTINATION .)
include(CPack)
